--- a/packages/demo-server/package.json
+++ b/packages/demo-server/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "ilrt-server": "^0.0.0"
+  },
   "author": "",
   "license": "ISC"
 }
