--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "ilrt-server",
   "version": "0.0.0",
   "description": "Server to socket-rpc",
   "main": "index.js",
